--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -8,4 +10,9 @@ body {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
+}
+
+input, button, select, body {
+  font-family: 'Roboto';
+  font-size: 18px;
 }
